@@ -26,9 +26,9 @@ clm2.to.polr <- function(mod) {
   }
   cl$formula <- cl$location
   cl$method <- cl$link
-  m <- match(c("formula", "data", "subset","weights", 
+  .m <- match(c("formula", "data", "subset","weights", 
                "na.action",  "contrasts", "method"), names(cl), 0L)
-  cl <- cl[c(1L, m)]
+  cl <- cl[c(1L, .m)]
   cl$start <- c(mod$beta, mod$Theta)
   cl[[1L]] <- as.name("polr")
   mod2 <- eval(cl)
@@ -81,9 +81,9 @@ clmm.to.polr <- function(mod) {
   }
   cl$formula <- fixmod(mod$formula)  # changed for clm2
   cl$method <- cl$link
-  m <- match(c("formula", "data", "subset","weights", 
+  .m <- match(c("formula", "data", "subset","weights", 
                "na.action",  "contrasts", "method"), names(cl), 0L)
-  cl <- cl[c(1L, m)]
+  cl <- cl[c(1L, .m)]
   cl$start <- c(mod$beta, mod$Theta)
   cl[[1L]] <- as.name("polr")
   mod2 <- eval(cl)
@@ -137,9 +137,9 @@ clm.to.polr <- function(mod) {
   }
 # cl$formula <- cl$location
   cl$method <- cl$link
-  m <- match(c("formula", "data", "subset","weights", 
+  .m <- match(c("formula", "data", "subset","weights", 
                "na.action",  "contrasts", "method"), names(cl), 0L)
-  cl <- cl[c(1L, m)]
+  cl <- cl[c(1L, .m)]
   cl$start <- c(mod$beta, mod$Theta)
   cl[[1L]] <- as.name("polr")
   mod2 <- eval(cl)
